testsuite/tests/parser/should_fail/pfail049.alan
utf8_count() : proc
{
(* Ελληνικά *) $
}
