testsuite/tests/parser/should_fail/pfail049.stderr
pfail049.alan:3:16: Error: Parse error on input `$'
	Cannot parse char `$'

